[package]
name = "universalis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
bson = "2.4.0"
serde = { version = "1.0.147", features = ["derive"] }
tungstenite = { version = "0.19.0", features = ["rustls-tls-native-roots"] }
