[package]
name = "universalis_importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
listings = { path = "../listings" }
bson = "2.4.0"
serde = { version = "1.0.147", features = ["derive"] }
tungstenite = { version = "0.19.0", features = ["rustls-tls-native-roots"] }
redis = { version = "0.23.0", features = ["r2d2"] }
r2d2 = "0.8.10"
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = "0.3.17"
time = "0.3.22"
