[package]
name = "universalis_importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
listings = { path = "../listings" }
bson = "2.4.0"
byteorder = "1.5.0"
redis = "0.23.3"
serde = { version = "1.0.147", features = ["derive"] }
time = "0.3.22"
tungstenite = { version = "0.20.1", features = ["rustls-tls-native-roots"] }
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = "0.3.17"
zstd-safe = { version = "7.0.0", features = ["fat-lto", "std"] }